<resources>
    <string name="app_name">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit duis tristique sollicitudin nibh. Euismod elementum nisi quis eleifend. Fames ac turpis egestas maecenas pharetra convallis. Vel orci porta non pulvinar neque laoreet suspendisse. Mattis pellentesque id nibh tortor id aliquet lectus proin. Cursus metus aliquam eleifend mi in nulla posuere. Mattis nunc sed blandit libero volutpat sed cras. Quis ipsum suspendisse ultrices gravida dictum fusce ut placerat. Sit amet facilisis magna etiam tempor orci eu lobortis. Ullamcorper malesuada proin libero nunc consequat interdum. Nulla malesuada pellentesque elit eget gravida cum. Turpis massa tincidunt dui ut ornare lectus sit amet. Pellentesque nec nam aliquam sem et tortor consequat id. Turpis egestas sed tempus urna. Magna ac placerat vestibulum lectus mauris ultrices. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Congue quisque egestas diam in arcu cursus euismod quis. In iaculis nunc sed augue lacus viverra vitae congue. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. In fermentum posuere urna nec. Interdum consectetur libero id faucibus nisl tincidunt eget. Aenean et tortor at risus viverra adipiscing. A cras semper auctor neque vitae tempus. Ullamcorper malesuada proin libero nunc. Vel risus commodo viverra maecenas accumsan.</string>


    <!--    register page strings-->


    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">PIN</string>
    <string name="Start">Start</string>
    <string name="already_have_an_account">Registeration</string>
    <string name="user_name">User</string>
    <string name="ask_me_pin_on_start_up">Ask me pin on start up</string>
    <string name="update">Update</string>
    <string name="jan_01_20">JAN 01 20</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="note">Note</string>
    <string name="user_email">info@aait.com</string>
    <string name="enter_task">Enter Task</string>
    <string name="title">Title</string>


</resources>