<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".Schedule">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CCBCDEF3">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/schedul"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/title"
                    android:ems="10"
                    android:hint="@string/title"
                    android:padding="16dp"
                    android:textColorHint="@color/default_text_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.034" />

                <Button
                    android:id="@+id/datePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginTop="24dp"
                    android:drawableLeft="@drawable/calendar_symbol_tool"
                    android:onClick="openDatePicker"
                    android:text="@string/jan_01_20"
                    android:textColor="@color/default_text_color"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.084"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
                    app:layout_constraintVertical_bias="0.06">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/from"
                            android:textColor="@color/default_text_color"
                            android:textSize="25sp">
                        </TextView>
                        <TimePicker
                            android:id="@+id/simpleTimePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/timePickerOrange"
                            android:timePickerMode="spinner" />
                    </LinearLayout>

                    <View
                        android:layout_width="15dp"
                        android:layout_height="3dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/range" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"

                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"

                            android:text="@string/to"
                            android:textColor="@color/default_text_color"
                            android:textSize="25sp">

                        </TextView>

                        <TimePicker
                            android:id="@+id/simpleTimePicke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/timePickerOrange"
                            android:timePickerMode="spinner" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="parent"
                tools:layout_editor_absoluteX="80dp">

                <!--            <Button-->
                <!--                android:id="@+id/addTask"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:background="@android:color/transparent"-->
                <!--                android:drawableRight="@drawable/add">-->

                <!--            </Button>-->


            </LinearLayout>


            <Button
                android:id="@+id/save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/save"

                android:text="Save"
                android:textColor="#5d5d5a"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.972"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/note"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note"
                android:textColor="@color/default_text_color"
                android:textColorHint="#5d5d5a"
                android:inputType="textMultiLine"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                app:layout_constraintVertical_bias="0.132" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/layout_list"
                tools:layout_editor_absoluteX="-27dp">

                <View
                    android:layout_width="250dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="4"
                    android:background="@drawable/addtask"
                    />

                <ImageView
                    android:id="@+id/addTask"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:layout_editor_absoluteX="-16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>